src/parser/grammar_parser.go
// Code generated from Grammar.g4 by ANTLR 4.13.0. DO NOT EDIT.

package parser // Grammar

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type GrammarParser struct {
	*antlr.BaseParser
}

var GrammarParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func grammarParserInit() {
	staticData := &GrammarParserStaticData
	staticData.LiteralNames = []string{
		"", "'['", "']'", "','", "'func'", "'||'", "'&&'", "'!'", "", "", "",
		"", "", "'main'", "'int'", "'float'", "'char'", "'boolean'", "'void'",
		"'return'", "'if'", "'else'", "'while'", "'scanf'", "'println'", "'('",
		"')'", "'{'", "'}'", "';'", "'='", "'+'", "'-'", "'*'", "'/'", "'%'",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "", "", "", "", "", "CONSTANTE", "NUM_INT", "NUM_DEC", "TEXTO",
		"COMP", "MAIN", "INT", "FLOAT", "CHAR", "BOOLEAN", "VOID", "RETURN",
		"IF", "ELSE", "WHILE", "SCANF", "PRINTLN", "LPAREN", "RPAREN", "LBRACE",
		"RBRACE", "SEMI", "ASSIGN", "PLUS", "MINUS", "MUL", "DIV", "MOD", "ID",
		"WS",
	}
	staticData.RuleNames = []string{
		"programa", "listaFuncoes", "decFuncao", "tipoRetorno", "tipo", "tipoBase",
		"dimensao", "parametros", "listaParametros", "principal", "bloco", "listaVariaveis",
		"listaId", "comandos", "comando", "leitura", "termoLeitura", "novoTermoLeitura",
		"dimensao2", "escrita", "termoEscrita", "novoTermoEscrita", "selecao",
		"senao", "enquanto", "atribuicao", "complemento", "funcao", "argumentos",
		"novoArgumento", "retorno", "expressao", "exprOu", "exprOu2", "exprE",
		"exprE2", "exprRelacional", "exprRelacional2", "exprAditiva", "exprAditiva2",
		"opAditivo", "exprMultiplicativa", "exprMultiplicativa2", "opMultiplicativo",
		"fator", "termo", "sinal",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// GrammarParserInit initializes any static state used to implement GrammarParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewGrammarParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func GrammarParserInit() {
	staticData := &GrammarParserStaticData
	staticData.once.Do(grammarParserInit)
}

// NewGrammarParser produces a new parser instance for the optional input antlr.TokenStream.
func NewGrammarParser(input antlr.TokenStream) *GrammarParser {
	GrammarParserInit()
	this := new(GrammarParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &GrammarParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "Grammar.g4"

	return this
}

// GrammarParser tokens.
const (
	GrammarParserEOF       = antlr.TokenEOF
	GrammarParserT__0      = 1
	GrammarParserT__1      = 2
	GrammarParserT__2      = 3
	GrammarParserT__3      = 4
	GrammarParserT__4      = 5
	GrammarParserT__5      = 6
	GrammarParserT__6      = 7
	GrammarParserCONSTANTE = 8
	GrammarParserNUM_INT   = 9
	GrammarParserNUM_DEC   = 10
	GrammarParserTEXTO     = 11
	GrammarParserCOMP      = 12
	GrammarParserMAIN      = 13
	GrammarParserINT       = 14
	GrammarParserFLOAT     = 15
	GrammarParserCHAR      = 16
	GrammarParserBOOLEAN   = 17
	GrammarParserVOID      = 18
	GrammarParserRETURN    = 19
	GrammarParserIF        = 20
	GrammarParserELSE      = 21
	GrammarParserWHILE     = 22
	GrammarParserSCANF     = 23
	GrammarParserPRINTLN   = 24
	GrammarParserLPAREN    = 25
	GrammarParserRPAREN    = 26
	GrammarParserLBRACE    = 27
	GrammarParserRBRACE    = 28
	GrammarParserSEMI      = 29
	GrammarParserASSIGN    = 30
	GrammarParserPLUS      = 31
	GrammarParserMINUS     = 32
	GrammarParserMUL       = 33
	GrammarParserDIV       = 34
	GrammarParserMOD       = 35
	GrammarParserID        = 36
	GrammarParserWS        = 37
)

// GrammarParser rules.
const (
	GrammarParserRULE_programa            = 0
	GrammarParserRULE_listaFuncoes        = 1
	GrammarParserRULE_decFuncao           = 2
	GrammarParserRULE_tipoRetorno         = 3
	GrammarParserRULE_tipo                = 4
	GrammarParserRULE_tipoBase            = 5
	GrammarParserRULE_dimensao            = 6
	GrammarParserRULE_parametros          = 7
	GrammarParserRULE_listaParametros     = 8
	GrammarParserRULE_principal           = 9
	GrammarParserRULE_bloco               = 10
	GrammarParserRULE_listaVariaveis      = 11
	GrammarParserRULE_listaId             = 12
	GrammarParserRULE_comandos            = 13
	GrammarParserRULE_comando             = 14
	GrammarParserRULE_leitura             = 15
	GrammarParserRULE_termoLeitura        = 16
	GrammarParserRULE_novoTermoLeitura    = 17
	GrammarParserRULE_dimensao2           = 18
	GrammarParserRULE_escrita             = 19
	GrammarParserRULE_termoEscrita        = 20
	GrammarParserRULE_novoTermoEscrita    = 21
	GrammarParserRULE_selecao             = 22
	GrammarParserRULE_senao               = 23
	GrammarParserRULE_enquanto            = 24
	GrammarParserRULE_atribuicao          = 25
	GrammarParserRULE_complemento         = 26
	GrammarParserRULE_funcao              = 27
	GrammarParserRULE_argumentos          = 28
	GrammarParserRULE_novoArgumento       = 29
	GrammarParserRULE_retorno             = 30
	GrammarParserRULE_expressao           = 31
	GrammarParserRULE_exprOu              = 32
	GrammarParserRULE_exprOu2             = 33
	GrammarParserRULE_exprE               = 34
	GrammarParserRULE_exprE2              = 35
	GrammarParserRULE_exprRelacional      = 36
	GrammarParserRULE_exprRelacional2     = 37
	GrammarParserRULE_exprAditiva         = 38
	GrammarParserRULE_exprAditiva2        = 39
	GrammarParserRULE_opAditivo           = 40
	GrammarParserRULE_exprMultiplicativa  = 41
	GrammarParserRULE_exprMultiplicativa2 = 42
	GrammarParserRULE_opMultiplicativo    = 43
	GrammarParserRULE_fator               = 44
	GrammarParserRULE_termo               = 45
	GrammarParserRULE_sinal               = 46
)

// IProgramaContext is an interface to support dynamic dispatch.
type IProgramaContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	ListaFuncoes() IListaFuncoesContext
	Principal() IPrincipalContext
	EOF() antlr.TerminalNode

	// IsProgramaContext differentiates from other interfaces.
	IsProgramaContext()
}

type ProgramaContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramaContext() *ProgramaContext {
	var p = new(ProgramaContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GrammarParserRULE_programa
	return p
}

func InitEmptyProgramaContext(p *ProgramaContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GrammarParserRULE_programa
}

func (*ProgramaContext) IsProgramaContext() {}

func NewProgramaContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramaContext {
	var p = new(ProgramaContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = GrammarParserRULE_programa

	return p
}

func (s *ProgramaContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramaContext) ListaFuncoes() IListaFuncoesContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IListaFuncoesContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IListaFuncoesContext)
}

func (s *ProgramaContext) Principal() IPrincipalContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPrincipalContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPrincipalContext)
}

func (s *ProgramaContext) EOF() antlr.TerminalNode {
	return s.GetToken(GrammarParserEOF, 0)
}

func (s *ProgramaContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramaContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramaContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GrammarListener); ok {
		listenerT.EnterPrograma(s)
	}
}

func (s *ProgramaContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GrammarListener); ok {
		listenerT.ExitPrograma(s)
	}
}

func (p *GrammarParser) Programa() (localctx IProgramaContext) {
	localctx = NewProgramaContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, GrammarParserRULE_programa)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(94)
		p.ListaFuncoes()
	}
	{
		p.SetState(95)
		p.Principal()
	}
	{
		p.SetState(96)
		p.Match(GrammarParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IListaFuncoesContext is an interface to support dynamic dispatch.
type IListaFuncoesContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	DecFuncao() IDecFuncaoContext
	ListaFuncoes() IListaFuncoesContext

	// IsListaFuncoesContext differentiates from other interfaces.
	IsListaFuncoesContext()
}

type ListaFuncoesContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyListaFuncoesContext() *ListaFuncoesContext {
	var p = new(ListaFuncoesContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GrammarParserRULE_listaFuncoes
	return p
}

func InitEmptyListaFuncoesContext(p *ListaFuncoesContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GrammarParserRULE_listaFuncoes
}

func (*ListaFuncoesContext) IsListaFuncoesContext() {}

func NewListaFuncoesContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ListaFuncoesContext {
	var p = new(ListaFuncoesContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = GrammarParserRULE_listaFuncoes

	return p
}

func (s *ListaFuncoesContext) GetParser() antlr.Parser { return s.parser }

func (s *ListaFuncoesContext) DecFuncao() IDecFuncaoContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDecFuncaoContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDecFuncaoContext)
}

func (s *ListaFuncoesContext) ListaFuncoes() IListaFuncoesContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IListaFuncoesContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IListaFuncoesContext)
}

func (s *ListaFuncoesContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ListaFuncoesContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ListaFuncoesContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GrammarListener); ok {
		listenerT.EnterListaFuncoes(s)
	}
}

func (s *ListaFuncoesContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GrammarListener); ok {
		listenerT.ExitListaFuncoes(s)
	}
}

func (p *GrammarParser) ListaFuncoes() (localctx IListaFuncoesContext) {
	localctx = NewListaFuncoesContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, GrammarParserRULE_listaFuncoes)
	p.SetState(102)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case GrammarParserINT, GrammarParserFLOAT, GrammarParserCHAR, GrammarParserBOOLEAN, GrammarParserVOID:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(98)
			p.DecFuncao()
		}
		{
			p.SetState(99)
			p.ListaFuncoes()
		}

	case GrammarParserMAIN:
		p.EnterOuterAlt(localctx, 2)

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IDecFuncaoContext is an interface to support dynamic dispatch.
type IDecFuncaoContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	TipoRetorno() ITipoRetornoContext
	ID() antlr.TerminalNode
	LPAREN() antlr.TerminalNode
	Parametros() IParametrosContext
	RPAREN() antlr.TerminalNode
	Bloco() IBlocoContext

	// IsDecFuncaoContext differentiates from other interfaces.
	IsDecFuncaoContext()
}

type DecFuncaoContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDecFuncaoContext() *DecFuncaoContext {
	var p = new(DecFuncaoContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GrammarParserRULE_decFuncao
	return p
}

func InitEmptyDecFuncaoContext(p *DecFuncaoContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GrammarParserRULE_decFuncao
}

func (*DecFuncaoContext) IsDecFuncaoContext() {}

func NewDecFuncaoContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DecFuncaoContext {
	var p = new(DecFuncaoContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = GrammarParserRULE_decFuncao

	return p
}

func (s *DecFuncaoContext) GetParser() antlr.Parser { return s.parser }

func (s *DecFuncaoContext) TipoRetorno() ITipoRetornoContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITipoRetornoContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITipoRetornoContext)
}

func (s *DecFuncaoContext) ID() antlr.TerminalNode {
	return s.GetToken(GrammarParserID, 0)
}

func (s *DecFuncaoContext) LPAREN() antlr.TerminalNode {
	return s.GetToken(GrammarParserLPAREN, 0)
}

func (s *DecFuncaoContext) Parametros() IParametrosContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IParametrosContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IParametrosContext)
}

func (s *DecFuncaoContext) RPAREN() antlr.TerminalNode {
	return s.GetToken(GrammarParserRPAREN, 0)
}

func (s *DecFuncaoContext) Bloco() IBlocoContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBlocoContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBlocoContext)
}

func (s *DecFuncaoContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DecFuncaoContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DecFuncaoContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GrammarListener); ok {
		listenerT.EnterDecFuncao(s)
	}
}

func (s *DecFuncaoContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GrammarListener); ok {
		listenerT.ExitDecFuncao(s)
	}
}

func (p *GrammarParser) DecFuncao() (localctx IDecFuncaoContext) {
	localctx = NewDecFuncaoContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, GrammarParserRULE_decFuncao)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(104)
		p.TipoRetorno()
	}
	{
		p.SetState(105)
		p.Match(GrammarParserID)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(106)
		p.Match(GrammarParserLPAREN)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(107)
		p.Parametros()
	}
	{
		p.SetState(108)
		p.Match(GrammarParserRPAREN)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(109)
		p.Bloco()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ITipoRetornoContext is an interface to support dynamic dispatch.
type ITipoRetornoContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Tipo() ITipoContext
	VOID() antlr.TerminalNode

	// IsTipoRetornoContext differentiates from other interfaces.
	IsTipoRetornoContext()
}

type TipoRetornoContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTipoRetornoContext() *TipoRetornoContext {
	var p = new(TipoRetornoContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GrammarParserRULE_tipoRetorno
	return p
}

func InitEmptyTipoRetornoContext(p *TipoRetornoContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GrammarParserRULE_tipoRetorno
}

func (*TipoRetornoContext) IsTipoRetornoContext() {}

func NewTipoRetornoContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TipoRetornoContext {
	var p = new(TipoRetornoContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = GrammarParserRULE_tipoRetorno

	return p
}

func (s *TipoRetornoContext) GetParser() antlr.Parser { return s.parser }

func (s *TipoRetornoContext) Tipo() ITipoContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITipoContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITipoContext)
}

func (s *TipoRetornoContext) VOID() antlr.TerminalNode {
	return s.GetToken(GrammarParserVOID, 0)
}

func (s *TipoRetornoContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TipoRetornoContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TipoRetornoContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GrammarListener); ok {
		listenerT.EnterTipoRetorno(s)
	}
}

func (s *TipoRetornoContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GrammarListener); ok {
		listenerT.ExitTipoRetorno(s)
	}
}

func (p *GrammarParser) TipoRetorno() (localctx ITipoRetornoContext) {
	localctx = NewTipoRetornoContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, GrammarParserRULE_tipoRetorno)
	p.SetState(113)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case GrammarParserINT, GrammarParserFLOAT, GrammarParserCHAR, GrammarParserBOOLEAN:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(111)
			p.Tipo()
		}

	case GrammarParserVOID:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(112)
			p.Match(GrammarParserVOID)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ITipoContext is an interface to support dynamic dispatch.
type ITipoContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	TipoBase() ITipoBaseContext
	Dimensao() IDimensaoContext

	// IsTipoContext differentiates from other interfaces.
	IsTipoContext()
}

type TipoContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTipoContext() *TipoContext {
	var p = new(TipoContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GrammarParserRULE_tipo
	return p
}

func InitEmptyTipoContext(p *TipoContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GrammarParserRULE_tipo
}

func (*TipoContext) IsTipoContext() {}

func NewTipoContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TipoContext {
	var p = new(TipoContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = GrammarParserRULE_tipo

	return p
}

func (s *TipoContext) GetParser() antlr.Parser { return s.parser }

func (s *TipoContext) TipoBase() ITipoBaseContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ITipoBaseContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ITipoBaseContext)
}

func (s *TipoContext) Dimensao() IDimensaoContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDimensaoContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDimensaoContext)
}

func (s *TipoContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TipoContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *TipoContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GrammarListener); ok {
		listenerT.EnterTipo(s)
	}
}

func (s *TipoContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(GrammarListener); ok {
		listenerT.ExitTipo(s)
	}
}

func (p *GrammarParser) Tipo() (localctx ITipoContext) {
	localctx = NewTipoContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, GrammarParserRULE_tipo)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(115)
		p.TipoBase()
	}
	{
		p.SetState(116)
		p.Dimensao()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ITipoBaseContext is an interface to support dynamic dispatch.
type ITipoBaseContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	INT() antlr.TerminalNode
	FLOAT() antlr.TerminalNode
	CHAR() antlr.TerminalNode
	BOOLEAN() antlr.TerminalNode

	// IsTipoBaseContext differentiates from other interfaces.
	IsTipoBaseContext()
}

type TipoBaseContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyTipoBaseContext() *TipoBaseContext {
	var p = new(TipoBaseContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GrammarParserRULE_tipoBase
	return p
}

func InitEmptyTipoBaseContext(p *TipoBaseContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = GrammarParserRULE_tipoBase
}

func (*TipoBaseContext) IsTipoBaseContext() {}

func NewTipoBaseContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *TipoBaseContext {
	var p = new(TipoBaseContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = GrammarParserRULE_tipoBase

	return p
}

func (s *TipoBaseContext) GetParser() antlr.Parser { return s.parser }

func (s *TipoBaseContext) INT() antlr.TerminalNode {
	return s.GetToken(GrammarParserINT, 0)
}

func (s *TipoBaseContext) FLOAT() antlr.TerminalNode {
	return s.GetToken(GrammarParserFLOAT, 0)
}

func (s *TipoBaseContext) CHAR() antlr.TerminalNode {
	return s.GetToken(GrammarParserCHAR, 0)
}

func (s *TipoBaseContext) BOOLEAN() antlr.TerminalNode {
	return s.GetToken(GrammarParserBOOLEAN, 0)
}

func (s *TipoBaseContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *TipoBaseContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}
